# load-forecast

./: INSTRUCTIONS.md  Makefile  README.md  notes.md  pyproject.toml
examples/: example.ipynb  example.py  example_task.ipynb
forecasting_library/datasets/: __init__.py
forecasting_library/datasets/data/: caiso_system_load.csv
forecasting_library/forecasting/: backtesting.py  base_model.py  evaluation.py  forecast_model.py  forecasting_api.py  forecasting_task.py  gridsearch_model.py  linear_model.py  preprocessing.py  random_forest_model.py
tests/datasets/: test_dataloaders.py
tests/forecasting/: test_backtesting.py  test_forecast_model.py  test_forecasting_api.py  test_integration.py  test_preprocessing.py
