[tool.black]
line-length = 100

[tool.flake8]
max-line-length = 100

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
implicit_reexport = false
warn_no_return = true
warn_unreachable = true
warn_unused_ignores = true

[tool.poetry]
name = "forecasting-library"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
xgboost = "^2.1.1"

[tool.poetry.group.dev.dependencies]
autoflake = "^2.3.1"
black = "^24.10.0"
flake8 = "^7.1.1"
isort = "^5.13.2"
jupyterlab = "^4.2.5"
mypy = "^1.11.2"
pandas-stubs = "^2.2.2.240909"
pytest = "^8.3.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
